fix(spacing): update spacing in vertical flow

--- a/apps/love-astro/src/styles/global.css
+++ b/apps/love-astro/src/styles/global.css
@@ -84,7 +84,7 @@ main {
 }
 
 .next-party-info {
-  @apply mb-24;
+  @apply  mb-64;
 }
 
 /* playlist classes */
